// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactFieldBase does not render the add button when repeatable is true and the maximum limit of repetions is reached 1`] = `
<div>
  <div
    class="form-group hide"
  >
    <div
      class="lfr-ddm-form-field-repeatable-toolbar"
    >
      <button
        class="ddm-form-field-repeatable-add-button p-0 hide btn btn-sm btn-primary"
        title="duplicate"
        type="button"
      >
        <svg
          class="lexicon-icon lexicon-icon-plus"
          role="presentation"
        >
          <use
            xlink:href="#plus"
          />
        </svg>
      </button>
    </div>
    <label
      aria-describedby="undefined_fieldDetails"
      class="ddm-empty"
      tabindex="0"
    />
    <span
      class="sr-only"
      id="undefined_fieldDetails"
    >
      Text
      <br />
    </span>
  </div>
</div>
`;

exports[`ReactFieldBase does not render the label if showLabel is false 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
    tabindex="0"
  >
    
  </div>
</div>
`;

exports[`ReactFieldBase renders the FieldBase with contentRenderer 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
    tabindex="0"
  >
    <div>
      <h1>
        Foo bar
      </h1>
    </div>
    
  </div>
</div>
`;

exports[`ReactFieldBase renders the FieldBase with help text 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
    tabindex="0"
  >
    <span
      aria-hidden="true"
      class="form-text"
    >
      Type something!
    </span>
    <span
      class="sr-only"
      id="undefined_fieldDetails"
    >
      Type something!
      <br />
    </span>
  </div>
</div>
`;

exports[`ReactFieldBase renders the FieldBase with id 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
    tabindex="0"
  >
    
  </div>
</div>
`;

exports[`ReactFieldBase renders the FieldBase with label 1`] = `
<div>
  <div
    class="form-group hide"
  >
    <label
      aria-describedby="undefined_fieldDetails"
      class="ddm-label"
      tabindex="0"
    >
      Text
    </label>
    <span
      class="sr-only"
      id="undefined_fieldDetails"
    >
      Text
      <br />
    </span>
  </div>
</div>
`;

exports[`ReactFieldBase renders the FieldBase with required 1`] = `
<div>
  <div
    class="form-group hide"
  >
    <label
      aria-describedby="undefined_fieldDetails"
      class="ddm-label"
      tabindex="0"
    >
      <span
        class="ddm-label-required reference-mark"
      >
        <svg
          class="lexicon-icon lexicon-icon-asterisk"
          role="presentation"
        >
          <use
            xlink:href="#asterisk"
          />
        </svg>
      </span>
    </label>
    <span
      class="sr-only"
      id="undefined_fieldDetails"
    >
      undefined
      <br />
      required
    </span>
  </div>
</div>
`;

exports[`ReactFieldBase renders the add button when repeatable is true 1`] = `
<div>
  <div
    class="form-group hide"
  >
    <div
      class="lfr-ddm-form-field-repeatable-toolbar"
    >
      <button
        class="ddm-form-field-repeatable-add-button p-0 btn btn-sm btn-primary"
        title="duplicate"
        type="button"
      >
        <svg
          class="lexicon-icon lexicon-icon-plus"
          role="presentation"
        >
          <use
            xlink:href="#plus"
          />
        </svg>
      </button>
    </div>
    <label
      aria-describedby="undefined_fieldDetails"
      class="ddm-empty"
      tabindex="0"
    />
    <span
      class="sr-only"
      id="undefined_fieldDetails"
    >
      Text
      <br />
    </span>
  </div>
</div>
`;

exports[`ReactFieldBase renders the default markup 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
    tabindex="0"
  >
    
  </div>
</div>
`;
